# data-science-learning

./: .gitignore  README.md  pyproject.toml
.metals/: metals.lock.db
GAN-pytorch-book/notebooks/: chapter_2.CelebA.ipynb  chapter_3.CelebA.ipynb
GAN-pytorch-book/notes/: chapter_2.md  chapter_3.md
GAN-pytorch-book/src/: celeb_a.py  generator.py  jupyter_tools.py  mnist.py  view.py
an_introduction_to_statistical_learning/: chapter_11.ipynb  chapter_2.ipynb  chapter_3.ipynb  chapter_5.ipynb  chapter_8.ipynb  index.md
an_introduction_to_statistical_learning/notes/: an-introduction-to-statical-learning.md  chapter_11.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_8.md
bayesian-analysis-with-python/: chapter_2.ipynb
dbn/notebooks/: pgmpy.ipynb
dbn/notes/: DBN介绍.md
dstools/: __init__.py
dstools/evaluate/: __init__.py  ols.py
scikitools/deep_learning/: dataload.py
