[tool.poetry]
name = "data-science-learning"
version = "0.1.0"
description = "数据科学工具"
authors = ["Huang Baochen <huangbaochenwo@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.3.4"
numpy = "^1.21.3"
scipy = "^1.7.1"
statsmodels = "^0.13.0"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
